--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         .hero {
             position: relative;
-            height: 100vh;
+            min-height: 100svh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -59,13 +59,13 @@
             to { opacity: 1; transform: translateY(0); }
         }
         .hero .brand h1 {
-            font-size: 4rem;
+            font-size: clamp(2rem, 5vw, 4rem);
             font-weight: 700;
             text-shadow: 0 0 20px #00ffff;
             margin-bottom: 1rem;
         }
         .hero .brand p {
-            font-size: 1.5rem;
+            font-size: clamp(1rem, 3vw, 1.5rem);
             font-weight: 400;
             text-shadow: 0 0 10px #ff00ff;
         }
@@ -84,7 +84,7 @@
             color: #00ffff;
             padding: 0.5rem 1rem;
             font-family: 'Orbitron', sans-serif;
-            font-size: 1rem;
+            font-size: clamp(0.8rem, 2vw, 1rem);
             cursor: pointer;
             transition: all 0.3s ease;
             border-radius: 5px;
@@ -105,12 +105,12 @@
             to { opacity: 1; }
         }
         .about h2 {
-            font-size: 2rem;
+            font-size: clamp(1.5rem, 4vw, 2rem);
             margin-bottom: 1rem;
             text-shadow: 0 0 10px #ff00ff;
         }
         .about p {
-            font-size: 1.2rem;
+            font-size: clamp(1rem, 2.5vw, 1.2rem);
             line-height: 1.6;
             max-width: 800px;
             margin: 0 auto;
@@ -126,7 +126,7 @@
         }
         .portfolio h2 {
             text-align: center;
-            font-size: 2.5rem;
+            font-size: clamp(2rem, 5vw, 2.5rem);
             margin-bottom: 2rem;
             text-shadow: 0 0 20px #00ffff;
         }
@@ -143,13 +143,14 @@
             border-radius: 10px;
             cursor: pointer;
             transition: transform 0.3s ease;
+            aspect-ratio: 16 / 9;
         }
         .card:hover {
             transform: scale(1.05);
         }
         .card img {
             width: 100%;
-            height: 200px;
+            height: 100%;
             object-fit: cover;
             transition: transform 0.3s ease;
         }
@@ -177,6 +178,7 @@
             max-width: 90%;
             max-height: 90%;
             border-radius: 10px;
+            object-fit: contain;
         }
         .lightbox .close {
             position: absolute;
@@ -217,16 +219,17 @@
             70% { box-shadow: 0 0 0 10px rgba(0,255,255,0); }
             100% { box-shadow: 0 0 0 0 rgba(0,255,255,0); }
         }
-        @media (max-width: 768px) {
-            .hero .brand h1 {
-                font-size: 2.5rem;
+        @media (max-width: 767px) {
+            .hero {
+                min-height: 100svh;
             }
-            .hero .brand p {
-                font-size: 1.2rem;
+            .hero video {
+                object-fit: contain;
             }
             .nav {
                 flex-direction: column;
                 gap: 1rem;
+                bottom: 2%;
             }
             .nav button {
                 padding: 0.5rem;
@@ -239,11 +242,37 @@
                 padding: 2rem 1rem;
             }
             .grid {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: repeat(2, 1fr);
                 gap: 1rem;
             }
-            .card img {
-                height: 150px;
+            .card {
+                aspect-ratio: 4 / 3;
+            }
+            .social {
+                bottom: 10px;
+                right: 10px;
+            }
+            .social a {
+                width: 40px;
+                height: 40px;
+            }
+        }
+        @media (min-width: 768px) and (max-width: 1023px) {
+            .grid {
+                grid-template-columns: repeat(3, 1fr);
+                gap: 1.5rem;
+            }
+            .card {
+                aspect-ratio: 16 / 9;
+            }
+        }
+        @media (min-width: 1024px) {
+            .grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 2rem;
+            }
+            .card {
+                aspect-ratio: 16 / 9;
             }
         }
     </style>
@@ -320,33 +349,5 @@
             const lightboxImg = document.getElementById('lightbox-img');
             const closeLightbox = document.getElementById('close-lightbox');
 
-            // Load images
-            function loadImages(section, start, end) {
-                const grid = grids[section];
-                grid.innerHTML = '';
-                for (let i = start; i <= end; i++) {
-                    const card = document.createElement('div');
-                    card.className = 'card';
-                    const img = document.createElement('img');
-                    img.src = `images/${i}.jpg`;
-                    img.alt = `${section} ${i}`;
-                    img.addEventListener('click', () => openLightbox(img.src));
-                    card.appendChild(img);
-                    grid.appendChild(card);
-                }
-            }
-
-            loadImages('thumbnails', 1, 5);
-            loadImages('posters', 6, 10);
-            loadImages('roster', 11, 15);
-            loadImages('logos', 16, 20);
-
-            // Navigation
-            Object.keys(buttons).forEach(btnId => {
-                document.getElementById(btnId).addEventListener('click', function() {
-                    sections.forEach(sec => {
-                        const el = document.getElementById(sec);
-                        if (sec === buttons[btnId]) {
-                            el.classList.add('active');
-                        } else {
-                            el
+            function openLightbox(src) {
+                lightboxImg.src =
