--- a/index.html
+++ b/index.html
@@ -2,151 +2,415 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Zyra Graphics — Anime Cinematic Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@300;400;600;800&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Zyra Graphics | Creative Portfolio</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{background:#05070c;color:#fff;font-family:Inter,system-ui,Arial;height:100%;scroll-behavior:smooth;overflow-x:hidden}
-:root{--cyan:#00ffff;--purple:#a855f7;--glass:rgba(255,255,255,0.06)}
-section{min-height:100svh;padding:8vh 6vw;position:relative}
-h1,h2,h3{font-family:Orbitron;letter-spacing:2px}
-#nav{position:fixed;top:1.5vh;left:50%;transform:translateX(-50%);z-index:999;background:var(--glass);backdrop-filter:blur(14px);padding:10px 28px;border-radius:50px;display:flex;gap:26px;box-shadow:0 0 20px rgba(0,255,255,.2)}
-#nav a{text-decoration:none;color:#fff;font-size:clamp(12px,1.1vw,15px);opacity:.8;transition:.3s}
-#nav a:hover{opacity:1;color:var(--cyan)}
-#hero{padding:0}
-#hero video{position:absolute;inset:0;width:100%;height:100%;object-fit:cover}
-#hero::after{content:"";position:absolute;inset:0;background:linear-gradient(180deg,rgba(5,7,12,.2),#05070c)}
-.hero-inner{position:relative;z-index:2;height:100svh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
-.logo{font-size:clamp(48px,8vw,110px);font-weight:800;background:linear-gradient(90deg,var(--cyan),var(--purple));-webkit-background-clip:text;color:transparent;text-shadow:0 0 40px rgba(0,255,255,.4)}
-.subtitle{margin-top:12px;font-size:clamp(14px,2vw,22px);opacity:.8}
-.particles span{position:absolute;width:4px;height:4px;background:var(--cyan);border-radius:50%;opacity:.5;animation:float 20s linear infinite}
-@keyframes float{from{transform:translateY(0)}to{transform:translateY(-120vh)}}
-#portfolio .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:24px}
-.card{position:relative;aspect-ratio:3/4;overflow:hidden;border-radius:18px;cursor:pointer;transform-style:preserve-3d;transition:.4s}
-.card img{width:100%;height:100%;object-fit:cover}
-.card:hover{transform:rotateY(10deg) rotateX(6deg) scale(1.05);box-shadow:0 0 40px rgba(0,255,255,.3)}
-.card span{position:absolute;inset:0;background:linear-gradient(180deg,transparent,#05070c);display:flex;align-items:flex-end;padding:16px;font-family:Orbitron}
-.gallery{position:fixed;inset:0;background:rgba(0,0,0,.9);display:none;align-items:center;justify-content:center;z-index:999}
-.gallery.active{display:flex}
-.gallery img{max-width:90vw;max-height:90vh;border-radius:16px}
-.arrow{position:absolute;top:50%;transform:translateY(-50%);font-size:40px;cursor:pointer;opacity:.6}
-.arrow:hover{opacity:1}
-.arrow.left{left:5vw}
-.arrow.right{right:5vw}
-#anime video{width:100%;border-radius:20px;box-shadow:0 0 60px rgba(168,85,247,.4)}
-#about{display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center}
-.fade{opacity:0;transform:translateY(40px);transition:1s}
-.fade.show{opacity:1;transform:none}
-#testimonials{overflow:hidden}
-.carousel{display:flex;gap:40px;animation:slide 20s infinite linear}
-.testi{min-width:260px;background:var(--glass);padding:24px;border-radius:16px}
-@keyframes slide{from{transform:translateX(0)}to{transform:translateX(-60%)}}
-#cta{position:fixed;bottom:3vh;right:3vw;display:flex;flex-direction:column;gap:14px;z-index:999}
-.cta-btn{width:52px;height:52px;border-radius:50%;background:var(--glass);display:flex;align-items:center;justify-content:center;backdrop-filter:blur(10px);transition:.3s}
-.cta-btn:hover{background:var(--cyan)}
-svg{width:24px;height:24px;fill:white}
-@media(max-width:768px){#about{grid-template-columns:1fr}}
+:root {
+--bg: #000000;
+--accent: #00ffff;
+--glass: rgba(255, 255, 255, 0.1);
+--text: #ffffff;
+--transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        background: var(--bg);
+        color: var(--text);
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        line-height: 1.6;
+        overflow-x: hidden;
+    }
+
+    /* --- Hero --- */
+    .hero {
+        position: relative;
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        overflow: hidden;
+    }
+
+    .hero video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        transform: translate(-50%, -50%);
+        object-fit: cover;
+        z-index: -2;
+    }
+
+    .hero::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        z-index: -1;
+    }
+
+    .hero-content {
+        opacity: 0;
+        animation: fadeIn 2s forwards ease-in-out;
+        padding: 0 20px;
+    }
+
+    .hero-content h1 {
+        font-size: clamp(2.5rem, 8vw, 5rem);
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        margin-bottom: 10px;
+        color: var(--text);
+    }
+
+    .hero-content p {
+        font-size: clamp(1rem, 4vw, 1.5rem);
+        color: var(--accent);
+        font-weight: 300;
+    }
+
+    /* --- Nav --- */
+    nav {
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        background: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        padding: 15px 0;
+    }
+
+    .nav-links {
+        display: flex;
+        justify-content: center;
+        gap: clamp(10px, 4vw, 30px);
+        list-style: none;
+    }
+
+    .nav-links a {
+        text-decoration: none;
+        color: var(--text);
+        font-size: 0.9rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        transition: var(--transition);
+    }
+
+    .nav-links a:hover {
+        color: var(--accent);
+    }
+
+    /* --- Sections --- */
+    section {
+        padding: 80px 20px;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .section-title {
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 50px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: var(--accent);
+    }
+
+    /* --- Portfolio --- */
+    .portfolio-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 20px;
+    }
+
+    .card {
+        position: relative;
+        aspect-ratio: 3/4;
+        background: #111;
+        overflow: hidden;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+
+    .card img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.6s ease;
+    }
+
+    .card:hover img {
+        transform: scale(1.05);
+    }
+
+    /* --- Anime Section --- */
+    .anime-container {
+        width: 100%;
+        max-width: 800px;
+        margin: 0 auto;
+        position: relative;
+        opacity: 0;
+        transform: translateY(30px);
+        transition: 1s all ease-out;
+    }
+
+    .anime-container.visible {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .anime-video {
+        width: 100%;
+        border-radius: 8px;
+        box-shadow: 0 20px 50px rgba(0, 255, 255, 0.1);
+        display: block;
+    }
+
+    /* --- About --- */
+    .about-content {
+        text-align: center;
+        max-width: 700px;
+        margin: 0 auto;
+        opacity: 0;
+        transition: 1.5s all ease;
+    }
+
+    .about-content.visible {
+        opacity: 1;
+    }
+
+    /* --- Contact --- */
+    .contact-bar {
+        position: fixed;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 20px;
+        z-index: 200;
+    }
+
+    .float-btn {
+        width: 60px;
+        height: 60px;
+        background: var(--bg);
+        border: 1px solid var(--accent);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
+        animation: pulse 2s infinite;
+        transition: var(--transition);
+    }
+
+    .float-btn img {
+        width: 30px;
+        height: 30px;
+    }
+
+    /* --- Lightbox --- */
+    .lightbox {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        z-index: 1000;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .lightbox-img {
+        max-width: 90%;
+        max-height: 80vh;
+        object-fit: contain;
+        user-select: none;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color: #fff;
+        font-size: 40px;
+        cursor: pointer;
+    }
+
+    .nav-btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        color: #fff;
+        font-size: 40px;
+        cursor: pointer;
+        padding: 20px;
+    }
+
+    .prev-btn { left: 10px; }
+    .next-btn { right: 10px; }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes pulse {
+        0% { box-shadow: 0 0 0 0 rgba(0, 255, 255, 0.7); }
+        70% { box-shadow: 0 0 0 15px rgba(0, 255, 255, 0); }
+        100% { box-shadow: 0 0 0 0 rgba(0, 255, 255, 0); }
+    }
+
+    @media (max-width: 768px) {
+        .nav-btn { display: none; }
+        section { padding: 60px 15px; }
+    }
 </style>
+
 </head>
 <body>
-
-<div id="nav">
-<a href="#hero">Home</a>
-<a href="#portfolio">Portfolio</a>
-<a href="#anime">Anime</a>
-<a href="#about">About</a>
-<a href="#contact">Contact</a>
+<div class="hero" id="home">
+    <video autoplay muted loop playsinline>
+        <source src="video/hero.mp4" type="video/mp4">
+    </video>
+    <div class="hero-content">
+        <h1>Zyra Graphics</h1>
+        <p>Graphic Designer & Web Developer</p>
+    </div>
 </div>
 
-<section id="hero">
-<video src="video/hero.mp4" autoplay muted loop></video>
-<div class="hero-inner">
-<div class="logo">Zyra Graphics</div>
-<div class="subtitle">Creative Designer & Motion Artist</div>
-</div>
-<div class="particles">
-<span style="left:10%;top:100%"></span>
-<span style="left:30%;top:100%"></span>
-<span style="left:50%;top:100%"></span>
-<span style="left:70%;top:100%"></span>
-<span style="left:90%;top:100%"></span>
-</div>
-</section>
+<nav>
+    <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#anime">Anime</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 
 <section id="portfolio">
-<h2>Portfolio</h2>
-<div class="grid">
-<div class="card" data-start="1"><img src="images/1.jpg"><span>Brand Visuals</span></div>
-<div class="card" data-start="6"><img src="images/6.jpg"><span>Motion Posters</span></div>
-<div class="card" data-start="11"><img src="images/11.jpg"><span>Anime Art</span></div>
-<div class="card" data-start="16"><img src="images/16.jpg"><span>Concept UI</span></div>
-<div class="card" data-start="20"><img src="images/20.jpg"><span>Experimental</span></div>
-</div>
+    <h2 class="section-title">Selected Works</h2>
+    <div class="portfolio-grid">
+        <div class="card" onclick="openGallery(0)"><img src="images/1.jpg" alt="P1"></div>
+        <div class="card" onclick="openGallery(5)"><img src="images/6.jpg" alt="P2"></div>
+        <div class="card" onclick="openGallery(10)"><img src="images/11.jpg" alt="P3"></div>
+        <div class="card" onclick="openGallery(15)"><img src="images/16.jpg" alt="P4"></div>
+        <div class="card" onclick="openGallery(19)"><img src="images/20.jpg" alt="P5"></div>
+    </div>
 </section>
 
-<div class="gallery" id="lightbox">
-<div class="arrow left">&#10094;</div>
-<img id="lightImg">
-<div class="arrow right">&#10095;</div>
-</div>
-
 <section id="anime">
-<h2>Anime Cinematic</h2>
-<video src="video/hero.mp4" autoplay muted loop></video>
+    <h2 class="section-title">Motion Art</h2>
+    <div class="anime-container scroll-reveal">
+        <video class="anime-video" autoplay muted loop playsinline>
+            <source src="video/hero.mp4" type="video/mp4">
+        </video>
+    </div>
 </section>
 
 <section id="about">
-<div class="fade">
-<h2>About Me</h2>
-<p>Zyra Graphics is a high-end creative studio focused on anime-style cinematic motion, futuristic UI, and luxury digital experiences. My work blends storytelling, atmosphere, and cutting-edge visual language to create unforgettable brand identities.</p>
-</div>
-<div class="fade">
-<img src="images/3.jpg" style="width:100%;border-radius:20px">
-</div>
+    <h2 class="section-title">About</h2>
+    <div class="about-content scroll-reveal">
+        <p>Zyra Graphics is a cutting-edge creative studio specializing in visual storytelling. We bridge the gap between high-end graphic design and functional web development, creating immersive digital experiences that resonate. Our focus is on precision, minimalism, and the neon aesthetic of the future.</p>
+    </div>
 </section>
 
-<section id="testimonials">
-<h2>Testimonials</h2>
-<div class="carousel">
-<div class="testi">“Zyra delivered visuals beyond imagination.”</div>
-<div class="testi">“Feels like a Netflix anime studio.”</div>
-<div class="testi">“Next-level branding work.”</div>
-<div class="testi">“Absolutely cinematic.”</div>
+<div id="contact" style="height: 100px;"></div>
+
+<div class="contact-bar">
+    <a href="[https://wa.me/yourlink](https://wa.me/yourlink)" class="float-btn">
+        <img src="icons/whatsapp.svg" alt="WhatsApp">
+    </a>
+    <a href="[https://instagram.com/yourlink](https://instagram.com/yourlink)" class="float-btn">
+        <img src="icons/instagram.svg" alt="Instagram">
+    </a>
 </div>
-</section>
 
-<section id="contact">
-<h2>Let’s Create Something Legendary</h2>
-</section>
-
-<div id="cta">
-<a class="cta-btn" href="https://wa.me/918093448650">
-<svg viewBox="0 0 24 24"><path d="M20 3.5A10 10 0 1 0 3.5 20L2 22l2.1-.6A10 10 0 0 0 20 3.5z"/></svg>
-</a>
-<a class="cta-btn" href="https://instagram.com/northstars.esports">
-<svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5z"/></svg>
-</a>
+<div id="lightbox" class="lightbox">
+    <span class="close-btn" onclick="closeGallery()">&times;</span>
+    <button class="nav-btn prev-btn" onclick="changeImg(-1)">&#10094;</button>
+    <img id="lightbox-img" class="lightbox-img" src="" alt="">
+    <button class="nav-btn next-btn" onclick="changeImg(1)">&#10095;</button>
 </div>
 
 <script>
-const cards=document.querySelectorAll(".card")
-const box=document.getElementById("lightbox")
-const img=document.getElementById("lightImg")
-let current=1
-cards.forEach(c=>c.onclick=()=>{current=c.dataset.start;open()})
-function open(){img.src="images/"+current+".jpg";box.classList.add("active")}
-document.querySelector(".arrow.left").onclick=()=>{current--;if(current<1)current=20;open()}
-document.querySelector(".arrow.right").onclick=()=>{current++;if(current>20)current=1;open()}
-box.onclick=()=>box.classList.remove("active")
+    // Gallery Logic
+    let currentImgIdx = 1;
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
 
-const fades=document.querySelectorAll(".fade")
-window.addEventListener("scroll",()=>{
-fades.forEach(el=>{
-const rect=el.getBoundingClientRect()
-if(rect.top<window.innerHeight-100)el.classList.add("show")
-})
-})
+    function openGallery(startIdx) {
+        currentImgIdx = startIdx + 1;
+        updateLightbox();
+        lightbox.style.display = 'flex';
+        document.body.style.overflow = 'hidden';
+    }
+
+    function closeGallery() {
+        lightbox.style.display = 'none';
+        document.body.style.overflow = 'auto';
+    }
+
+    function changeImg(step) {
+        currentImgIdx += step;
+        if (currentImgIdx > 20) currentImgIdx = 1;
+        if (currentImgIdx < 1) currentImgIdx = 20;
+        updateLightbox();
+    }
+
+    function updateLightbox() {
+        lightboxImg.src = `images/${currentImgIdx}.jpg`;
+    }
+
+    // Swipe support
+    let touchstartX = 0;
+    let touchendX = 0;
+    
+    lightbox.addEventListener('touchstart', e => touchstartX = e.changedTouches[0].screenX);
+    lightbox.addEventListener('touchend', e => {
+        touchendX = e.changedTouches[0].screenX;
+        if (touchstartX - touchendX > 50) changeImg(1);
+        if (touchendX - touchstartX > 50) changeImg(-1);
+    });
+
+    // Scroll Reveal
+    const observerOptions = { threshold: 0.2 };
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('visible');
+            }
+        });
+    }, observerOptions);
+
+    document.querySelectorAll('.scroll-reveal').forEach(el => observer.observe(el));
 </script>
+
 </body>
 </html>
