--- a/index.html
+++ b/index.html
@@ -2,414 +2,197 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Zyra Graphics | Creative Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Zyra Graphics</title>
+
 <style>
-:root {
---bg: #000000;
---accent: #00ffff;
---glass: rgba(255, 255, 255, 0.1);
---text: #ffffff;
---transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+*{margin:0;padding:0;box-sizing:border-box;font-family:system-ui}
+html,body{background:#000;color:#fff;overflow-x:hidden;scroll-behavior:smooth}
+
+/* NAV */
+nav{
+position:fixed;top:15px;left:50%;transform:translateX(-50%);
+display:flex;gap:25px;padding:12px 28px;
+background:rgba(0,0,0,.4);
+backdrop-filter:blur(14px);
+border-radius:50px;
+z-index:1000
 }
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        -webkit-tap-highlight-color: transparent;
-    }
+nav a{color:#0ff;text-decoration:none;font-size:14px}
 
-    html {
-        scroll-behavior: smooth;
-    }
+/* SECTIONS */
+section{min-height:100svh;display:flex;align-items:center;justify-content:center;position:relative}
 
-    body {
-        background: var(--bg);
-        color: var(--text);
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        line-height: 1.6;
-        overflow-x: hidden;
-    }
+/* HERO */
+.hero video{
+position:absolute;width:100%;height:100%;
+object-fit:cover;z-index:-2
+}
+.hero::after{
+content:"";position:absolute;width:100%;height:100%;
+background:linear-gradient(to bottom,rgba(0,0,0,.8),#000)
+}
+.hero-content{text-align:center}
+.hero-content h1{
+font-size:clamp(3rem,10vw,6rem);
+letter-spacing:4px
+}
+.hero-content p{margin-top:10px;color:#0ff}
 
-    /* --- Hero --- */
-    .hero {
-        position: relative;
-        height: 100vh;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        overflow: hidden;
-    }
+/* PORTFOLIO */
+.portfolio{flex-direction:column;padding:80px 15px}
+.posters{
+display:grid;grid-template-columns:repeat(2,1fr);
+gap:14px;max-width:1000px;width:100%
+}
+.poster{
+height:160px;
+background:#111;border:1px solid #0ff;
+display:flex;align-items:center;justify-content:center;
+cursor:pointer;transition:.3s
+}
+.poster:hover{transform:scale(1.05);box-shadow:0 0 20px cyan}
 
-    .hero video {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
-        transform: translate(-50%, -50%);
-        object-fit: cover;
-        z-index: -2;
-    }
+/* GALLERY */
+.gallery{
+position:fixed;inset:0;background:#000;
+display:none;align-items:center;justify-content:center;
+z-index:2000
+}
+.gallery img{max-width:90%;max-height:80vh}
+.gallery .close{
+position:absolute;top:20px;right:20px;
+padding:10px;border:1px solid cyan;color:cyan
+}
+.arrow{
+position:absolute;top:50%;
+font-size:40px;color:cyan;cursor:pointer
+}
+.left{left:20px}
+.right{right:20px}
 
-    .hero::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        z-index: -1;
-    }
+/* ANIME */
+.anime video{
+width:90%;max-width:700px;
+border:2px solid cyan
+}
 
-    .hero-content {
-        opacity: 0;
-        animation: fadeIn 2s forwards ease-in-out;
-        padding: 0 20px;
-    }
+/* ABOUT */
+.about{text-align:center;padding:60px}
+.about p{max-width:600px;line-height:1.6}
 
-    .hero-content h1 {
-        font-size: clamp(2.5rem, 8vw, 5rem);
-        text-transform: uppercase;
-        letter-spacing: 4px;
-        margin-bottom: 10px;
-        color: var(--text);
-    }
+/* CONTACT */
+.contact{
+position:fixed;bottom:20px;right:20px;
+display:flex;flex-direction:column;gap:12px;z-index:3000
+}
+.contact img{
+width:48px;height:48px;
+filter:drop-shadow(0 0 12px cyan);
+animation:pulse 2s infinite
+}
+@keyframes pulse{
+0%{transform:scale(1)}
+50%{transform:scale(1.15)}
+100%{transform:scale(1)}
+}
 
-    .hero-content p {
-        font-size: clamp(1rem, 4vw, 1.5rem);
-        color: var(--accent);
-        font-weight: 300;
-    }
-
-    /* --- Nav --- */
-    nav {
-        position: sticky;
-        top: 0;
-        z-index: 100;
-        background: rgba(0, 0, 0, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        padding: 15px 0;
-    }
-
-    .nav-links {
-        display: flex;
-        justify-content: center;
-        gap: clamp(10px, 4vw, 30px);
-        list-style: none;
-    }
-
-    .nav-links a {
-        text-decoration: none;
-        color: var(--text);
-        font-size: 0.9rem;
-        font-weight: 500;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        transition: var(--transition);
-    }
-
-    .nav-links a:hover {
-        color: var(--accent);
-    }
-
-    /* --- Sections --- */
-    section {
-        padding: 80px 20px;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-
-    .section-title {
-        text-align: center;
-        font-size: 2rem;
-        margin-bottom: 50px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: var(--accent);
-    }
-
-    /* --- Portfolio --- */
-    .portfolio-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        gap: 20px;
-    }
-
-    .card {
-        position: relative;
-        aspect-ratio: 3/4;
-        background: #111;
-        overflow: hidden;
-        cursor: pointer;
-        border-radius: 4px;
-    }
-
-    .card img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform 0.6s ease;
-    }
-
-    .card:hover img {
-        transform: scale(1.05);
-    }
-
-    /* --- Anime Section --- */
-    .anime-container {
-        width: 100%;
-        max-width: 800px;
-        margin: 0 auto;
-        position: relative;
-        opacity: 0;
-        transform: translateY(30px);
-        transition: 1s all ease-out;
-    }
-
-    .anime-container.visible {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .anime-video {
-        width: 100%;
-        border-radius: 8px;
-        box-shadow: 0 20px 50px rgba(0, 255, 255, 0.1);
-        display: block;
-    }
-
-    /* --- About --- */
-    .about-content {
-        text-align: center;
-        max-width: 700px;
-        margin: 0 auto;
-        opacity: 0;
-        transition: 1.5s all ease;
-    }
-
-    .about-content.visible {
-        opacity: 1;
-    }
-
-    /* --- Contact --- */
-    .contact-bar {
-        position: fixed;
-        bottom: 30px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        gap: 20px;
-        z-index: 200;
-    }
-
-    .float-btn {
-        width: 60px;
-        height: 60px;
-        background: var(--bg);
-        border: 1px solid var(--accent);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
-        animation: pulse 2s infinite;
-        transition: var(--transition);
-    }
-
-    .float-btn img {
-        width: 30px;
-        height: 30px;
-    }
-
-    /* --- Lightbox --- */
-    .lightbox {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #000;
-        z-index: 1000;
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .lightbox-img {
-        max-width: 90%;
-        max-height: 80vh;
-        object-fit: contain;
-        user-select: none;
-    }
-
-    .close-btn {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        color: #fff;
-        font-size: 40px;
-        cursor: pointer;
-    }
-
-    .nav-btn {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background: none;
-        border: none;
-        color: #fff;
-        font-size: 40px;
-        cursor: pointer;
-        padding: 20px;
-    }
-
-    .prev-btn { left: 10px; }
-    .next-btn { right: 10px; }
-
-    @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes pulse {
-        0% { box-shadow: 0 0 0 0 rgba(0, 255, 255, 0.7); }
-        70% { box-shadow: 0 0 0 15px rgba(0, 255, 255, 0); }
-        100% { box-shadow: 0 0 0 0 rgba(0, 255, 255, 0); }
-    }
-
-    @media (max-width: 768px) {
-        .nav-btn { display: none; }
-        section { padding: 60px 15px; }
-    }
+/* DESKTOP */
+@media(min-width:768px){
+.posters{grid-template-columns:repeat(5,1fr)}
+.poster{height:220px}
+}
 </style>
-
 </head>
+
 <body>
-<div class="hero" id="home">
-    <video autoplay muted loop playsinline>
-        <source src="video/hero.mp4" type="video/mp4">
-    </video>
-    <div class="hero-content">
-        <h1>Zyra Graphics</h1>
-        <p>Graphic Designer & Web Developer</p>
-    </div>
-</div>
 
 <nav>
-    <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#anime">Anime</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
+<a href="#home">Home</a>
+<a href="#portfolio">Portfolio</a>
+<a href="#anime">Anime</a>
+<a href="#about">About</a>
+<a href="#contact">Contact</a>
 </nav>
 
-<section id="portfolio">
-    <h2 class="section-title">Selected Works</h2>
-    <div class="portfolio-grid">
-        <div class="card" onclick="openGallery(0)"><img src="images/1.jpg" alt="P1"></div>
-        <div class="card" onclick="openGallery(5)"><img src="images/6.jpg" alt="P2"></div>
-        <div class="card" onclick="openGallery(10)"><img src="images/11.jpg" alt="P3"></div>
-        <div class="card" onclick="openGallery(15)"><img src="images/16.jpg" alt="P4"></div>
-        <div class="card" onclick="openGallery(19)"><img src="images/20.jpg" alt="P5"></div>
-    </div>
+<section class="hero" id="home">
+<video autoplay muted loop playsinline preload="auto">
+  <source src="video/hero.mp4" type="video/mp4">
+</video>
+<div class="hero-content">
+<h1>Zyra Graphics</h1>
+<p>Graphic Designer & Motion Artist</p>
+</div>
 </section>
 
-<section id="anime">
-    <h2 class="section-title">Motion Art</h2>
-    <div class="anime-container scroll-reveal">
-        <video class="anime-video" autoplay muted loop playsinline>
-            <source src="video/hero.mp4" type="video/mp4">
-        </video>
-    </div>
+<section class="portfolio" id="portfolio">
+<h2>Portfolio</h2>
+<br>
+<div class="posters">
+<div class="poster" onclick="openGallery(1)">Project 1</div>
+<div class="poster" onclick="openGallery(6)">Project 2</div>
+<div class="poster" onclick="openGallery(11)">Project 3</div>
+<div class="poster" onclick="openGallery(16)">Project 4</div>
+<div class="poster" onclick="openGallery(1)">Project 5</div>
+</div>
 </section>
 
-<section id="about">
-    <h2 class="section-title">About</h2>
-    <div class="about-content scroll-reveal">
-        <p>Zyra Graphics is a cutting-edge creative studio specializing in visual storytelling. We bridge the gap between high-end graphic design and functional web development, creating immersive digital experiences that resonate. Our focus is on precision, minimalism, and the neon aesthetic of the future.</p>
-    </div>
-</section>
-
-<div id="contact" style="height: 100px;"></div>
-
-<div class="contact-bar">
-    <a href="[https://wa.me/yourlink](https://wa.me/yourlink)" class="float-btn">
-        <img src="icons/whatsapp.svg" alt="WhatsApp">
-    </a>
-    <a href="[https://instagram.com/yourlink](https://instagram.com/yourlink)" class="float-btn">
-        <img src="icons/instagram.svg" alt="Instagram">
-    </a>
+<div class="gallery" id="gallery">
+<span class="arrow left" onclick="prevImg()">&#10094;</span>
+<img id="galleryImg">
+<span class="arrow right" onclick="nextImg()">&#10095;</span>
+<div class="close" onclick="closeGallery()">Close</div>
 </div>
 
-<div id="lightbox" class="lightbox">
-    <span class="close-btn" onclick="closeGallery()">&times;</span>
-    <button class="nav-btn prev-btn" onclick="changeImg(-1)">&#10094;</button>
-    <img id="lightbox-img" class="lightbox-img" src="" alt="">
-    <button class="nav-btn next-btn" onclick="changeImg(1)">&#10095;</button>
+<section class="anime" id="anime">
+<video autoplay muted loop playsinline preload="auto">
+  <source src="video/hero.mp4" type="video/mp4">
+</video>
+</section>
+
+<section class="about" id="about">
+<h2>About Zyra</h2>
+<br>
+<p>
+Zyra Graphics is a premium creative studio focused on modern design,
+anime-inspired motion visuals and cinematic digital experiences.
+We blend storytelling with high-end visuals.
+</p>
+</section>
+
+<div class="contact" id="contact">
+<a href="#"><img src="icons/whatsapp.svg"></a>
+<a href="#"><img src="icons/instagram.svg"></a>
 </div>
 
 <script>
-    // Gallery Logic
-    let currentImgIdx = 1;
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = document.getElementById('lightbox-img');
+let current=1;
 
-    function openGallery(startIdx) {
-        currentImgIdx = startIdx + 1;
-        updateLightbox();
-        lightbox.style.display = 'flex';
-        document.body.style.overflow = 'hidden';
-    }
+function openGallery(start){
+current=start;
+gallery.style.display="flex";
+galleryImg.src="images/"+current+".jpg";
+}
+function closeGallery(){
+gallery.style.display="none";
+}
+function nextImg(){
+current++; if(current>20)current=1;
+galleryImg.src="images/"+current+".jpg";
+}
+function prevImg(){
+current--; if(current<1)current=20;
+galleryImg.src="images/"+current+".jpg";
+}
 
-    function closeGallery() {
-        lightbox.style.display = 'none';
-        document.body.style.overflow = 'auto';
-    }
-
-    function changeImg(step) {
-        currentImgIdx += step;
-        if (currentImgIdx > 20) currentImgIdx = 1;
-        if (currentImgIdx < 1) currentImgIdx = 20;
-        updateLightbox();
-    }
-
-    function updateLightbox() {
-        lightboxImg.src = `images/${currentImgIdx}.jpg`;
-    }
-
-    // Swipe support
-    let touchstartX = 0;
-    let touchendX = 0;
-    
-    lightbox.addEventListener('touchstart', e => touchstartX = e.changedTouches[0].screenX);
-    lightbox.addEventListener('touchend', e => {
-        touchendX = e.changedTouches[0].screenX;
-        if (touchstartX - touchendX > 50) changeImg(1);
-        if (touchendX - touchstartX > 50) changeImg(-1);
-    });
-
-    // Scroll Reveal
-    const observerOptions = { threshold: 0.2 };
-    const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.classList.add('visible');
-            }
-        });
-    }, observerOptions);
-
-    document.querySelectorAll('.scroll-reveal').forEach(el => observer.observe(el));
+/* mobile swipe */
+let startX=0;
+gallery.addEventListener("touchstart",e=>startX=e.touches[0].clientX);
+gallery.addEventListener("touchend",e=>{
+let diff=e.changedTouches[0].clientX-startX;
+if(diff>50)prevImg();
+if(diff<-50)nextImg();
+});
 </script>
 
 </body>
