--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ body{
   <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
     <img src="icons/whatsapp.png" alt="WhatsApp">
   </a>
-  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank" class="instagram">
+  <a href="https://instagram.com/zyragraphics.in" target="_blank" class="instagram">
     <img src="icons/instagram.png" alt="Instagram">
   </a>
 </div>
