--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@ body{
   <video autoplay muted loop playsinline>
     <source src="videos/anime.mp4" type="video/mp4">
   </video>
-  <svg id="hero-logo" viewBox="0 0 100 100">
-    <circle cx="50" cy="50" r="40" stroke="#fff" stroke-width="5" fill="none"/>
-    <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12">Zyra</text>
-  </svg>
+  <!-- Hero Logo Replace -->
+<div id="hero-logo">
+    <img src="images/zyra-logo.png" alt="Zyra Graphics Logo" style="width:80px; height:80px;">
+</div>
   <h1>Zyra Graphics</h1>
   <p>Hi, I'm Umer — a graphic designer & web developer.</p>
 
